--- a/app/src/main/res/layout/activity_cero_pantalla.xml
+++ b/app/src/main/res/layout/activity_cero_pantalla.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/fondo3">
 
 
     <ScrollView
@@ -174,7 +175,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="@string/intrEmail"
-            android:inputType="textPersonName"
+            android:inputType="text|textEmailAddress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.777"
