--- a/app/src/main/res/layout/activity_tercera_pantalla.xml
+++ b/app/src/main/res/layout/activity_tercera_pantalla.xml
@@ -162,7 +162,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/menos"
+        android:background="@drawable/minus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -180,7 +180,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/menos"
+        android:background="@drawable/minus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -198,7 +198,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/menos"
+        android:background="@drawable/minus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -216,7 +216,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/menos"
+        android:background="@drawable/minus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -234,7 +234,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/menos"
+        android:background="@drawable/minus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -252,7 +252,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/menos"
+        android:background="@drawable/minus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -270,7 +270,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/mas"
+        android:background="@drawable/plus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -288,7 +288,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/mas"
+        android:background="@drawable/plus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -306,7 +306,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/mas"
+        android:background="@drawable/plus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -324,7 +324,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/mas"
+        android:background="@drawable/plus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -342,7 +342,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/mas"
+        android:background="@drawable/plus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -360,7 +360,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/mas"
+        android:background="@drawable/plus"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -480,7 +480,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Kas Limon 1,5€/u"
+        android:text="Kas Limon (1,5€)"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -497,7 +497,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="RedBull 2€/u"
+        android:text="RedBull (2€)"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -514,7 +514,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Nestea 1,5€/u"
+        android:text="Nestea (1,5€)"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -531,7 +531,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Agua 1€/u"
+        android:text="Agua (1€)"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -548,7 +548,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Cerveza 2€/u"
+        android:text="Cerveza (2€)"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -565,7 +565,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Coca Cola 1,5€/u"
+        android:text="Coca Cola (1,5€)"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -605,6 +605,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Carrito actual"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#4CAF50"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.896"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.107" />
 
 
 </android.support.constraint.ConstraintLayout>
