--- a/app/src/main/res/layout/activity_primera_pantalla.xml
+++ b/app/src/main/res/layout/activity_primera_pantalla.xml
@@ -14,13 +14,12 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="232dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logofinal"
-        />
+        app:layout_constraintVertical_bias="0.783"
+        app:srcCompat="@drawable/logofinal" />
 
 </android.support.constraint.ConstraintLayout>
